apps/base/home_assistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: "ghcr.io/home-assistant/home-assistant:stable"
          securityContext:
            privileged: true
          ports:
            - containerPort: 8123
          volumeMounts:
            - mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              name: ha-config
            - mountPath: /config/automations.yaml
              subPath: automations.yaml
              name: ha-config
            - mountPath: /etc/localtime
              name: localtime
              readOnly: true
      volumes:
        - name: ha-config
          configMap:
            name: ha-config
        - name: localtime
          hostPath:
            path: /etc/localtime
