apps/base/home_assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  ports:
    - port: 8123
      targetPort: 8123
      name: home-assistant-web
  selector:
    app: home-assistant
  type: ClusterIP
